--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Document</title>
-
+		<title>Calculator/Converter</title>
+		<link rel="icon" href="./Assets/favicon-32x32.png">
 		<script type="module" src="./src/app/app.js"></script>
 	</head>
 
